# duden

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  SECURITY.md  common.py  duden.py  dudendown.py  ptktest.py  pyproject.toml  requirements.txt  run_duden.py  setup-git-hooks.sh  setup.cfg  setup.py  test_duden.py
completions/: duden  duden.fish
devutils/: investigate.sh
docs/: usage.md
duden/: __init__.py  __version__.py  cli.py  common.py  constants.py  display.py  duden.py  inflection.py  main.py  request.py  search.py  word.py
duden/locale/: build.py  build.sh  de_DE.po  duden.pot  eo.po  es_ES.po
duden/page/: base.py  grammar.py
git-hooks/: pre-commit
test_data/: Barmherzigkeit.json  Feiertag.json  Kragen.json  Petersilie.json  Qat.json  einfach.json  kragen.json  laufen.json
tests/: test_cli.py  test_duden.py  test_online_attributes.py  test_word.py
tests/cli_test_data/: cli_data_attributes.txt  cli_data_basic.txt
tests/test_data/: Barmherzigkeit.json  Barmherzigkeit.yaml  Feiertag.json  Feiertag.yaml  Keyboard.yaml  Kragen.json  Kragen.yaml  Meme.yaml  Petersilie.json  Petersilie.yaml  Qat.json  Qat.yaml  einfach.json  einfach.yaml  laufen.json  laufen.yaml
